--- a/styles/style.css
+++ b/styles/style.css
@@ -159,7 +159,7 @@
 }
 
 .content-strip h4{
-	color:#FFFFFF;
+	color:#000000;
 	position:absolute;	
 	z-index:9999;
 	text-transform:uppercase;
@@ -172,7 +172,7 @@
 }
 
 .content-strip p{
-	color:#FFFFFF;
+	color:#000000;
 	position:absolute;	
 	z-index:999;
 	margin-top:48px;
@@ -182,7 +182,7 @@
 
 .content-strip .overlay{
 	z-index:99;
-	background-color:rgba(0,0,0,0.8);
+	background-color:rgba(255,255,255,0.8);
 }
 
 .content-strip i{
